Fri Jun 23 10:20:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Made sure ETIME is always returned on timeouts of
          ACE_OS::sema_timedwait and not ETIMEDOUT.

        * tests/Semaphore_Test.cpp:
          Extended platform coverage of timeout tests.

        * tests/Auto_Event_Test.cpp:
        * tests/Manual_Event_Test.cpp:
        * tests/Process_Manual_Event_Test.cpp:
        * tests/Process_Semaphore_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added new tests.

Fri Jun 23 09:17:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/INET_Addr_Test_IPV6.cpp:
        * tests/Multihomed_INET_Addr_Test_IPV6.cpp:
        * tests/SOCK_Send_Recv_Test_IPV6.cpp:
        * tests/SOCK_Test_IPV6.cpp:
          Fixed WCHAR compile problems.

Fri Jun 23 08:49:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread{.h .cpp .inl}:
          Extended ACE_OS::event_xxx implemtation to support platforms having
          either PThread support with Process Shared condition variables
          or POSIX semaphores with named (process shared) semaphore support
          or using the new FIFO based semaphores.
          Fixed manual_reset implementation of condition based events
          (event_pulse() did not work).

Fri Jun 23 08:49:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/config-aix-4.x.h:
          Fixed problems by incorrectly reported ACE_HAS_POSIX_SEM_TIMEOUT
          by config-posix.h.

Fri Jun 24 07:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Removed extra semi-colon.

Thu Jun 23 22:24:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/config-linux-common.h:
          Fixed typo (ACE_HAS_SHMOPEN should be ACE_HAS_SHM_OPEN).

Thu Jun 23 17:14:39 2005  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (schedule_timer, reset_timer_interval):